--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,35 +1,60 @@
-/* Reset styles */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-p:last-child {
-  margin-bottom: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-a {
-  color: currentColor;
-  text-decoration: none;
-}
-
-button {
-  cursor: pointer;
+body {
+  font-family: 'Helvetica Neue', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
+  line-height: 1.5;
+  color: #2a2a2a;
 }
 
 img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.list {
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+}
+.container {
+  max-width: 1128px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.menu__item {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.menu__link {
+  display: block;
+  font-size: 16px;
+  padding: 20px 10px;
+  border: 1px solid #000000;
+  color: #000000;
+  border-radius: 10px;
+  transition: color 250ms linear;
+}
+
+.menu__link:hover,
+.menu__link:focus {
+  color: #145b94;
 }
